[gd_scene load_steps=3 format=3 uid="uid://0c3880po7k2m"]

[ext_resource type="Script" path="res://menu/menu_title.gd" id="1_xjrde"]
[ext_resource type="FontFile" uid="uid://br1u4dxauauu6" path="res://ui/fonts/Kenney Pixel.ttf" id="2_qpqt8"]

[node name="MenuTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjrde")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Header" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -480.0
offset_top = -176.0
offset_right = 480.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="Header"]
custom_minimum_size = Vector2(960, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qpqt8")
theme_override_font_sizes/font_size = 128
text = "Not A Very Intimate Conversation"
horizontal_alignment = 1
autowrap_mode = 2

[node name="SubTitle" type="Label" parent="Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qpqt8")
theme_override_font_sizes/font_size = 64
text = "They Were Roommates All Along!"
horizontal_alignment = 1

[node name="BtnNew" type="Button" parent="Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qpqt8")
theme_override_font_sizes/font_size = 48
text = "New Story"

[node name="BtnContinue" type="Button" parent="Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qpqt8")
theme_override_font_sizes/font_size = 48
text = "Continue Story"

[node name="BtnQuit" type="Button" parent="Header"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qpqt8")
theme_override_font_sizes/font_size = 48
text = "Quit"

[connection signal="pressed" from="Header/BtnNew" to="." method="_on_btn_new_pressed"]
[connection signal="pressed" from="Header/BtnContinue" to="." method="_on_btn_continue_pressed"]
[connection signal="pressed" from="Header/BtnQuit" to="." method="_on_btn_quit_pressed"]
